--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,12 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "autoprefixer": "latest",
+    "daisyui": "latest",
+    "postcss": "latest",
     "svelte": "^4.2.12",
+    "svelte-routing": "^2.12.0",
+    "tailwindcss": "latest",
     "vite": "^5.2.0"
   }
 }
