--- a/client/package.json
+++ b/client/package.json
@@ -17,5 +17,9 @@
     "svelte-routing": "^2.12.0",
     "tailwindcss": "latest",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "mapbox-gl": "^3.2.0"
   }
 }
