--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,51 +1,28 @@
-alembic==1.12.1
 annotated-types==0.6.0
-anyio==3.7.1
-blinker==1.7.0
-certifi==2023.7.22
-charset-normalizer==3.3.1
+anyio==4.3.0
+certifi==2024.2.2
 click==8.1.7
-dnspython==2.4.2
-email-validator==2.1.0.post1
-exceptiongroup==1.1.3
-fastapi==0.104.0
-Flask==3.0.0
-Flask-CKEditor==0.5.0
-Flask-Login==0.6.3
-Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.1
-greenlet==3.0.1
+deprecation==2.1.0
+fastapi==0.110.1
+gotrue==2.4.2
 h11==0.14.0
-httptools==0.6.1
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.3.2
-Mako==1.3.0
-MarkupSafe==2.1.3
-nltk==3.8.1
-pydantic==2.4.2
-pydantic_core==2.10.1
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.6
+packaging==24.0
+postgrest==0.16.2
+pydantic==2.6.4
+pydantic_core==2.16.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-PyYAML==6.0.1
-regex==2023.10.3
-requests==2.31.0
+python-dotenv==1.0.1
+realtime==1.0.3
 six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==2.0.23
-sseclient-py==1.8.0
-starlette==0.27.0
-tabulate==0.9.0
-together==0.2.6
-tqdm==4.66.1
-typer==0.9.0
-typing_extensions==4.8.0
-urllib3==2.0.7
-uvicorn==0.23.2
-uvloop==0.19.0
-watchfiles==0.21.0
+sniffio==1.3.1
+starlette==0.37.2
+storage3==0.7.4
+StrEnum==0.4.15
+supabase==2.4.1
+supafunc==0.4.5
+typing_extensions==4.11.0
+uvicorn==0.29.0
 websockets==12.0
-Werkzeug==2.2.2
-WTForms==3.1.1
